k8s/example-webapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-webapp
  namespace: example-ns
  labels:
    app: example-webapp
    name: example-webapp
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
      matchLabels:
        app: example-webapp
        name: example-webapp
  template:
    metadata:
      labels:
        app: example-webapp
        name: example-webapp
    spec:
      containers:
      - name: example-webapp
        image: example-image-path:example-tag
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      # imagePullSecrets:
      # - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: example-webapp
  namespace: example-ns
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-webapp
  namespace: example-ns
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: k3s-master01.westus2.cloudapp.azure.com
    http:
      paths:
      - path: /example-webapp
        pathType: Prefix
        backend:
          service:
            name: example-webapp
            port:
              number: 80
  tls:
  - hosts:
    - k3s-master01.westus2.cloudapp.azure.com
    secretName: default-tls
